--- a/src/Screens/Home/Home-Mobile.css
+++ b/src/Screens/Home/Home-Mobile.css
@@ -1,7 +1,6 @@
 @media screen and (max-width: 480px) {
   /* Styles à appliquer pour les écrans dont la largeur est inférieure ou égale à 480px */
   .home-section {
-    border: 2px solid red;
     background-color: #000000;
     width: 100vw;
     height: 100vh;
@@ -82,7 +81,6 @@
   .slider {
     position: absolute;
     /* background-color: #ff7b7b; */
-    border: #459cd5 solid 2px;
     width: 100vw;
     height: 100vh;
     color: white;
@@ -115,7 +113,6 @@
   }
   .who-am-i {
     /* margin-top: 100px; */
-    border: green solid 2px;
     width: 100vw;
     height: 100vh;
     color: white;
@@ -160,9 +157,9 @@
   }
   .description-container {
     margin-left: 40px;
+    margin-right: 40px;
     margin-top: 70px;
     display: flex;
-    width: 100%;
     justify-content: space-between;
     font-size: 50px;
     font-weight: 400;
@@ -202,38 +199,42 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: solid 2px yellow;
-    padding-top: 180px;
-    padding-bottom: 180px;
+    padding-top: 260px;
   }
   .img-who-am-i {
     position: absolute;
-    width: 198px;
-    height: 309px;
+    aspect-ratio: 170 / 265.3;
+    width: 250px;
     flex-shrink: 0;
-    border-radius: 34px;
+    border-radius: 24px;
     background-position: center !important;
     opacity: 0;
   }
   .img-antonin {
-    background: url("../../assets/img/antonin.jpeg") lightgray 50% / cover
-      no-repeat;
+    background: url("../../assets/img/antonin.jpeg");
+    background-size: cover;
+    background-repeat: no-repeat;
     transform: scale(1.2) rotate(2.4deg);
   }
   .img-developer {
-    background: url("../../assets/img/developper.jpg"),
-      lightgray 50% / cover no-repeat;
+    background: url("../../assets/img/developper.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
     transform: scale(1.2) rotate(-5.14deg);
     /* z-index: 50; */
   }
   .img-basketball {
-    background: url("../../assets/img/basketball.jpg"),
-      lightgray 50% / cover no-repeat;
+    background: url("../../assets/img/basketball.jpg");
+    background-size: contain;
+    background-repeat: no-repeat;
     transform: scale(1.2) rotate(4.3deg);
     /* z-index: 100; */
   }
 
   /* ---------------- Skills CSS ---------------- */
+  .skills-section {
+    margin-top: 50px;
+  }
   .display-skills {
     display: flex;
     flex-direction: column;
@@ -298,7 +299,7 @@
   .skill-separator {
     background-color: white;
     height: 1px;
-    width: 10%;
+    width: 100%;
   }
   .skill-img-container {
     width: 100%;
@@ -378,7 +379,6 @@
 
   /* -------- GITHUB --------- */
   .github-section {
-    border: solid 2px purple;
     height: 100vh;
     background-color: white;
     overflow: hidden;
@@ -465,9 +465,6 @@
   .damier-container > img {
     height: 100%;
   }
-  .damier-container > img:nth-child(1) {
-    border: solid 2px blue;
-  }
   .black-stars {
     width: 40px;
     height: 40px;
@@ -505,8 +502,8 @@
   /* CONCLUSION */
 
   .conclusion {
-    border: solid 2px yellow;
-    height: 90%;
+    padding-top: 120px;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -518,27 +515,27 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    font-size: 140px;
+    font-size: 80px;
     font-weight: 400;
     letter-spacing: -7px;
     margin-top: 100px;
   }
   .conclusion-title > span {
-    height: 0.8em;
+    height: 0.9em;
     line-height: 0.8em;
   }
   .conclusion-subtitle {
     text-align: center;
     font-size: 15px;
     font-weight: 400;
-    margin-top: 100px;
+    margin: 100px 10px;
   }
   .button-email {
     color: #ffffff;
     border-radius: 59px;
     border: 3px solid #ffffff;
     width: 263px;
-    height: 93px;
+    height: 80px;
     flex-shrink: 0;
     display: flex;
     justify-content: center;
@@ -556,41 +553,53 @@
     color: black;
   }
   .bottom-navbar {
-    height: 5vh;
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-direction: row;
-    margin: 0 100px;
+    margin: 10px 0;
   }
   .bottom-links {
     margin: 0 20px;
     text-decoration: none;
   }
+  .section-links {
+    display: none;
+  }
   .absolute {
     position: absolute;
   }
+  .stars-concl {
+    display: none;
+  }
   .concl-antonin {
     border-radius: 34px;
-    width: 403.143px;
-    height: 502.035px;
+    aspect-ratio: 403.143 / 502.035;
+    width: 300px;
     top: -380px;
     left: -280px;
     transform: rotate(11.426deg);
+    z-index: -1;
   }
   .concl-wtn {
-    width: 190px;
-    height: 190px;
+    display: none;
+  }
+  .concl-wtn-mobile {
+    /* aspect-ratio: 1; */
+    width: 120px;
+    height: 120px;
     top: -200px;
-    left: 800px;
+    left: 180px;
     transform: rotate(-11.426deg);
+    z-index: -1;
   }
   .concl-arosaje {
     border-radius: 34px;
-    width: 743px;
-    height: 613px;
+    aspect-ratio: 743 / 613;
+    width: 570px;
     top: -260px;
     right: -900px;
-    transform: rotate(-11.426deg);
+    transform: rotate(-18.426deg);
+    z-index: -1;
   }
 }
