--- a/src/Screens/Home/Home-Mobile.css
+++ b/src/Screens/Home/Home-Mobile.css
@@ -176,7 +176,7 @@
   .description-text-container {
     margin-left: 40px;
     margin-right: 40px;
-    margin-top: 60px;
+    margin-top: 30px;
     /* width: 720px; */
     text-align: justify;
     font-size: 20px;
@@ -195,6 +195,7 @@
     display: none;
   }
   .img-container {
+    position: absolute;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -203,8 +204,9 @@
   }
   .img-who-am-i {
     position: absolute;
+    top: 185%;
     aspect-ratio: 170 / 265.3;
-    width: 250px;
+    width: 220px;
     flex-shrink: 0;
     border-radius: 24px;
     background-position: center !important;
