--- a/src/Screens/Home/Home-Mobile.css
+++ b/src/Screens/Home/Home-Mobile.css
@@ -530,7 +530,7 @@
     text-align: center;
     font-size: 15px;
     font-weight: 400;
-    margin: 100px 10px;
+    margin: 100px 10px 20px 10px;
   }
   .button-email {
     color: #ffffff;
