--- a/src/Screens/Home/Home-Mobile.css
+++ b/src/Screens/Home/Home-Mobile.css
@@ -90,7 +90,7 @@
     align-items: center;
   }
   .big-letter {
-    font-size: 80px;
+    font-size: 4.7rem;
     letter-spacing: -5px;
   }
   .italic {
@@ -518,9 +518,9 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    font-size: 80px;
+    font-size: 4rem;
     font-weight: 400;
-    letter-spacing: -7px;
+    letter-spacing: -3px;
     margin-top: 100px;
   }
   .conclusion-title > span {
@@ -562,9 +562,18 @@
     flex-direction: row;
     margin: 10px 0;
   }
+  .sub-bottom-navbar {
+    width: 100%;
+    padding: 0 10%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+  }
   .bottom-links {
-    margin: 0 20px;
+    /* margin: 0 20px; */
     text-decoration: none;
+    font-size: 10px;
   }
   .section-links {
     display: none;
